--- a/view/package.json
+++ b/view/package.json
@@ -37,10 +37,11 @@
     "ethereumjs-wallet": "^1.0.2",
     "ethers": "^6.15.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
